--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tanstack/router-plugin": "^1.121.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "redaxios": "^0.5.1",
     "tailwindcss": "^4.0.6"
   },
   "devDependencies": {
